opam-version: "2.0"
synopsis: "SOCKS4a and SOCKS5 library - lwt helper functions"
maintainer: "root@localhost"
authors: [ "cfcs" ]
license: "AGPL"
homepage: "https://github.com/cfcs/ocaml-socks"
dev-repo: "git+https://github.com/cfcs/ocaml-socks.git"
bug-reports: "https://github.com/cfcs/ocaml-socks/issues"

build: [
  ["ocaml" "pkg/pkg-lwt.ml" "build" "--tests" "false" ]
  ["ocaml" "pkg/pkg-lwt.ml" "build" "-n" "socks-lwt" "--tests" "true"
  ] {with-test}
  ["ocaml" "pkg/pkg-lwt.ml" "test"  "-n" "socks-lwt"
  ] {with-test}
]

depends: [
  # {build}
  "ocaml" { >= "4.07.1" }
  "ocamlbuild"
  "ocamlfind"
  "topkg"

  "topkg-care" {with-doc}

  "ounit" {with-test}
  "qcheck" {with-test}

  "ipaddr"
  "logs"
  "rresult"

  "socks"
  "lwt"
]
