opam-version: "2.0"
synopsis: "SOCKS4a and SOCKS5 library - lwt helper functions"
maintainer: "root@localhost"
authors: [ "cfcs" ]
license: "AGPL-3.0"
homepage: "https://github.com/cfcs/ocaml-socks"
dev-repo: "git+https://github.com/cfcs/ocaml-socks.git"
bug-reports: "https://github.com/cfcs/ocaml-socks/issues"

build: [ "dune" "build" "-p" name "-j" jobs ]

depends: [
  "dune"
  "socks"
  "lwt"
]
