opam-version: "1.2"
maintainer: "root@localhost"
authors: [ "cfcs" ]
license: "AGPL"
homepage: "https://github.com/cfcs/ocaml-socks"
dev-repo: "https://github.com/cfcs/ocaml-socks.git"
bug-reports: "https://github.com/cfcs/ocaml-socks/issues"

available: [ ocaml-version >= "4.03.0" ]

build: [
  ["ocaml" "pkg/pkg.ml" "build" "--tests" "false"
  ]
]
build-test: [
  ["ocaml" "pkg/pkg.ml" "build" "--tests" "true" ]
  ["ocaml" "pkg/pkg.ml" "test" ]
]

depends: [
  # {build}
  "ocamlbuild"
  "ocamlfind"
  "topkg"

  "topkg-care" {doc}

  "ounit" {test}
  "qcheck" {test}

  "logs"
  "rresult"
  "ipaddr" { >= "4.0.0" }
  "sexplib0" # why is this a dependency? :-(
]
