opam-version: "2.0"
synopsis: "SOCKS4a and SOCKS5 library"
maintainer: "root@localhost"
authors: [ "cfcs" ]
license: "AGPL"
homepage: "https://github.com/cfcs/ocaml-socks"
dev-repo: "git+https://github.com/cfcs/ocaml-socks.git"
bug-reports: "https://github.com/cfcs/ocaml-socks/issues"



build: [
  ["ocaml" "pkg/pkg.ml" "build" "--tests" "false"
  ]
  ["ocaml" "pkg/pkg.ml" "build" "--tests" "true"
  ] {with-test}
  ["ocaml" "pkg/pkg.ml" "test"
  ] {with-test}
]

depends: [
  # {build}
  "ocaml" { >= "4.07.1" }
  "ocamlbuild"
  "ocamlfind"
  "topkg"

  "topkg-care" {with-doc}

  "ounit" {with-test}
  "qcheck" {with-test}

  "logs"
  "rresult"
  "ipaddr" { >= "4.0.0" }
  "sexplib0" # why is this a dependency? :-(
]
