opam-version: "2.0"
synopsis: "SOCKS4a and SOCKS5 library"
maintainer: "root@localhost"
authors: [ "cfcs" ]
license: "AGPL"
homepage: "https://github.com/cfcs/ocaml-socks"
dev-repo: "git+https://github.com/cfcs/ocaml-socks.git"
bug-reports: "https://github.com/cfcs/ocaml-socks/issues"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs]

depends: [
  "ocaml" { >= "4.07.1" }
  "dune"

  "ounit" {with-test}
  "qcheck" {with-test}

  "logs"
  "rresult"
  "ipaddr" { >= "4.0.0" }
]
